--- a/kavi/slotapp/static/time.html
+++ b/kavi/slotapp/static/time.html
@@ -1,96 +1,97 @@
-<<html>
+<html>
 <head>
-<title>slot Timetable</title>    
+    <title>Document</title>
+    <center>
+        <img src="logo.png" height="100" ; width="540">
+    </center>
 </head>
 <body>
-<center>
-<img src="/static/logo.png" height="100" width="540">
-</center>
-<br>
-<table align="center" width="540" cellspacing="2" cellpadding="5" border="7" bgcolor="lavender">
-<caption><b>SLOT TIME TABLE - D.K.KAVINILAVAN(23014025)</b></caption>
-<tr align="center">
-<th bgcolor="cream">Day/Time</th>
-<th bgcolor="cream">Monday</th>
-<th bgcolor="cream">Tuesday</th>
-<th bgcolor="cream">Wednesday</th>
-<th bgcolor="cream">Thursday</th>
-<th bgcolor="cream">Friday</th>
-</tr>
-<tr align="center">
-<th bgcolor="lavender">8-10</th>
-<td>FUNDAMENTALS OF C PROGRAMMING</td>
-<td>PRINCIPLES CHEMISTRY IN ENGINEERING</td>
-<td>FUNDAMENTALS OF WEB APPLICATION DEVELOPMENT</td>
-<td>ENGINEERING DESIGN AND MODELING</td>
-<td>PRINCIPLES CHEMISTRY IN ENGINEERING</td>
-</tr>
-<tr align="center">
-<th bgcolor="lavender">10-12</th>
-<td>FREE SLOT</td>
-<td>FUNDAMENTLS OF C PROGRAMMING</td>
-<td>FREE SLOT</td>
-<td>FUNDAMENTALS OF WEB APPLICATION DEVELOPMENT</td>
-<td>COMMUNICATIVE ENGLISH</td>
-</tr>
-<tr>
-<th bgcolor="lavender">12-1</th>
-<td colspan="5" align="center">L U N C H</td>
-</tr>
-<tr align="center">
-<th bgcolor="lavender">1-3</th>
-<td>FREE SLOT</td>
-<td>EINGINEERING DESIGN AND MODELLING</td>
-<td>FREE SLOT</td>
-<td>FREE SLOT</td>
-<td>FUNDAMENTALS OF WEB APPLICATION DEVELOPMENT</td>
-</tr>
-<tr align="center">
-<th bgcolor="lavender">3-5</th>
-<td>DIGITAL ELECTRONICS</td>
-<td>SOFT SKILLS</td>
-<td>COMMUNICATIVE ENGLISH</td>
-<td>FREE SLOT</td>
-<td>DIGITAL ELECTRONICS</td>
-</tr>
-</table>
-<br>
-<table align="center" cellspacing="3" cellpadding="4" border="2">
-<tr align="center">
-<th>s. No.</th>
-<th>Subject Code</th>
-<th>Subject Name</th>
-</tr>
-<tr>
-<td align="center">1.</td>
-<td align="center">19EN101</td>
-<td>COMMUNICATIVE ENGLISH(CE)</td>
-</tr>
-<tr>
-<td align="center">2.</td>
-<td align="center">19AI304</td>
-<td>FUNDAMENTALS OF C PROGRAMMING(C PROGRAM)</td>
-</tr>
-<tr>
-<td align="center">3.</td>
-<td align="center">19AI414</td>
-<td>FUNDAMENTALS OF WEB APPLICATION DEVELOPMENT (FWAD)</td>
-</tr>
-<tr>
-<td align="center">4.</td>
-<td align="center">19EE404</td>
-<td>DIGITAL ELECTRONICS (D.E)</th>
-</tr>
-<tr>
-<td align="center">5.</td>
-<td align="center">19EY701</td>
-<td>SOFT SKILLS (SS)</td>
-</tr>
-<tr>
-<td align="center">6.</td>
-<td align="center">19AI302</td>
-<td>EINGINEERING DESIGN AND MODELLING</td>
-</tr>
-</table>
+        <Table Border="1" Align="center" cellpadding="5" >  
+        <tr>
+            <th>Time/Day</th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+        </tr>
+        <tr>
+            <td>8-10</td>
+            <td>free slot</td>
+            <td colspan="2" ;align="center">Free Slot</td>
+            <td>free slot</td>
+            <td colspan="2" ;align="center">Free Slot</td>
+        </tr>
+        <tr>
+            <td>10-12</td>
+            <td>Reasoning ability</td>
+            <td>EMPD</td>
+            <td>FWAD</td>
+            <td>Computer networks</td>
+            <td>Introduction to data science</td>
+            <td>Free Slot</td>
+        </tr>
+        <tr>
+            <td>1-3</td>
+            <td>Physics</td>
+            <td>introduction to data science</td>
+            <td>Mentor Meet</td>
+            <td>EMPD</td>
+            <td>Fundamentals of c programming</td>
+            <td>Free slot</td>
+        </tr>
+        <tr>
+            <td>3-5</td>
+            <td>Computer networks</td>
+            <td>Fundamentals of C programming</td>
+            <td>Physics</td>>
+            <td>Free Slot</td>
+            <td>FWAD</td>
+            <td>Free Slot</td>
+        </tr>
+    </Table>
+   <Table Border="1" Align="center" cellpadding="7" >  
+        <tr>
+            <th>S.NO</th>
+            <th>Subject Code</th>
+            <th>Subject Name</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>19CS406</td>
+            <td>Compurt Networks</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>19PH814</td>
+            <td>Physics for quantum computing</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>19EY709</td>
+            <td>Reasoning ability</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>19AI414</td>
+            <td>Fundamentals of Web Application Development</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>19AI403</td>
+            <td>introduction to data science</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>19AI304</td>
+            <td>Fundamentals of C programming</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>19AI303</td>
+            <td>Engineering mechanics and product development</td>
+        </tr>
+    </Table>
 </body>
 </html>
